--- a/slide-puzzle-master/puzzle.html
+++ b/slide-puzzle-master/puzzle.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <a class="btn" href="/">Home</a>
+        <a class="btn" href="/index.html">Home</a>
         <div id="board">
         </div>
         <h1>Turns: <span id="turns">0</span></h1>
