--- a/things.html
+++ b/things.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <a class="btn" href="/">Home</a>
+        <a class="btn" href="/index.html">Home</a>
         <div class="Love">
             <h1>Miluju to, jak jsi praktický</h1>
             <h1>Miluju to, jak se zajímáš o druhé</h1>
