fix home button

--- a/animal/animal.html
+++ b/animal/animal.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="animal.css">
 </head>
 <body>
-    <a class="btn" href="/index.html">Home</a>
+    <a class="btn" href="index.html">Home</a>
     <div id="grid">
     </div>
     <script src="animal.js"></script>
