--- a/memory-game-master/memoryGame.html
+++ b/memory-game-master/memoryGame.html
@@ -17,7 +17,7 @@
                     <div class="moves">0 moves</div>
                     <div class="timer">time: 0 sec</div>
                 </div>
-                <a class="btn" href="/BP-app.html">Home</a>
+                <a class="btn" href="BP-app.html">Home</a>
             </div>
             <div class="board-container">
                 <div class="board" data-dimension="4"></div>
