--- a/animal/animal.html
+++ b/animal/animal.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="animal.css">
 </head>
 <body>
-    <a class="btn" href="D:\1_Programování\Birthday-app\Birthday-app\index.html">Home</a>
+    <a class="btn" href="https://adelachmel.github.io/Birthday-app/">Home</a>
     <div id="grid">
     </div>
     <script src="animal.js"></script>
