--- a/quiz/index.html
+++ b/quiz/index.html
@@ -12,7 +12,7 @@
             <h1>Quick Quiz</h1>
             <a class="btn" href="game.html">Play</a>
             <a class="btn" href="highscores.html">High Scores</a>
-            <a class="btn" href="D:\1_Programování\Birthday-app\Birthday-app\index.html">Home</a>
+            <a class="btn" href="https://adelachmel.github.io/Birthday-app/">Home</a>
         </div>
     </div>
 </body>
