--- a/slide-puzzle-master/puzzle.html
+++ b/slide-puzzle-master/puzzle.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <a class="btn" href="D:\1_Programování\Birthday-app\Birthday-app\index.html">Home</a>
+        <a class="btn" href="https://adelachmel.github.io/Birthday-app/">Home</a>
         <div id="board">
         </div>
         <h1>Turns: <span id="turns">0</span></h1>
