Add footer, fix background color/image

--- a/animal/animal.html
+++ b/animal/animal.html
@@ -10,6 +10,9 @@
     <a class="btn" href="https://adelachmel.github.io/Birthday-app/">Home</a>
     <div id="grid">
     </div>
+    <footer>
+        Created by ©Adela Chmelikova
+    </footer>
     <script src="animal.js"></script>
 
 </body>
