--- a/index.html
+++ b/index.html
@@ -50,5 +50,8 @@
             </div>
         </div>
     </div>
+    <footer>
+        Created by ©Adela Chmelikova
+    </footer>
 </body>
 </html>
