--- a/memory-game-master/memoryGame.html
+++ b/memory-game-master/memoryGame.html
@@ -24,5 +24,8 @@
                 <div class="win">You win!</div>
             </div>
         </div>
+        <footer>
+            Created by ©Adela Chmelikova
+        </footer>
     </body>
 </html>
