--- a/quiz/end.html
+++ b/quiz/end.html
@@ -23,6 +23,9 @@
             <a class="btn" href="/">Go Home</a>
         </div>
     </div>
+    <footer>
+        Created by ©Adela Chmelikova
+    </footer>
     <script src="end.js"></script>
 </body>
 
