--- a/quiz/game.html
+++ b/quiz/game.html
@@ -48,6 +48,9 @@
             </div>
         </div>
     </div>
+    <footer>
+        Created by ©Adela Chmelikova
+    </footer>
     <script src="game.js"></script>
 </body>
 </html>
