--- a/quiz/highScores.html
+++ b/quiz/highScores.html
@@ -15,6 +15,9 @@
             <a href="index.html" class="btn">Go Home</a>
         </div>
     </div>
+    <footer>
+        Created by ©Adela Chmelikova
+    </footer>
     <script src="highScores.js"></script>
 </body>
 </html>
