--- a/slide-puzzle-master/puzzle.html
+++ b/slide-puzzle-master/puzzle.html
@@ -13,5 +13,8 @@
         <div id="board">
         </div>
         <h1>Turns: <span id="turns">0</span></h1>
+        <footer>
+            Created by ©Adela Chmelikova
+        </footer>
     </body>
 </html>
