--- a/quiz/index.html
+++ b/quiz/index.html
@@ -15,5 +15,8 @@
             <a class="btn" href="https://adelachmel.github.io/Birthday-app/">Home</a>
         </div>
     </div>
+    <footer>
+        Created by ©Adela Chmelikova
+    </footer>
 </body>
 </html>
